--- a/src/xrScriptEngine/xrScriptEngine.vcxproj.filters
+++ b/src/xrScriptEngine/xrScriptEngine.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="LuaStudio\Defines.hpp">
       <Filter>LuaStudio</Filter>
     </ClInclude>
+    <ClInclude Include="Functor.hpp">
+      <Filter>Engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
